# quine

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  config.example.yml  design_addendum.md  pyproject.toml  quine-bookmark  quine-weave.bak  quine.py  quine.yaml  quine_readme.md
.github/workflows/: ci.yml
collect/: git.py  tags.py
contrib/: quine-project  quine-weave
core/: db.py  directives.py  regions.py
notes/: life.md
quine.nvim/: README.md
quine.nvim/lua/quine/: catalog.lua  db.lua  drift.lua  init.lua  jump.lua  regions.lua  split.lua  wrap.lua
quine.nvim/plugin/: quine.lua
render/: site.py
render/pages/: catalog.py  project.py
src/: errors.rs  life.yaml  main.rs  quine.yaml  types.rs
src/commands/: collect.rs  find.rs  mod.rs
src/db/: changelog.rs  mod.rs  schema.rs
src/extract/: config.rs  engine.rs  frontmatter.rs  links.rs  mod.rs  regions.rs
src/walk/: mod.rs
static/: code.css  site.css
templates/: base.html.j2  catalog.html.j2  project.html.j2
